--- a/src/Styles/Contact/contact.scss
+++ b/src/Styles/Contact/contact.scss
@@ -122,3 +122,69 @@ textarea {
     transform: scaleX(1.1) scaleY(1.1);
   }
 }
+
+@media (max-width: 500px) {
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 4rem;
+    .contacth3 {
+      text-align: center;
+      font-size: 3rem;
+    }
+    .contact-info-card-container {
+      width: fit-content;
+      display: flex;
+      justify-items: center;
+    }
+  }
+  .form-div {
+    text-align: center;
+    h3 {
+      text-align: center;
+      font-size: 2.7rem;
+    }
+    form {
+      text-align: left;
+      padding: 1rem;
+    }
+  }
+}
+@media (min-width: 501px) and (max-width: 1000px) {
+  .contact-intro-text {
+    p {
+      max-width: 70ch;
+    }
+  }
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 5rem;
+    .contacth3 {
+      text-align: center;
+      font-size: 3rem;
+    }
+    .contact-info-card-container {
+      width: fit-content;
+      display: flex;
+      justify-items: center;
+      margin: auto;
+      margin-top: 4rem;
+    }
+  }
+  .form-div {
+    text-align: center;
+    h3 {
+      text-align: center;
+      font-size: 2.7rem;
+    }
+    form {
+      text-align: left;
+      padding: 2rem;
+    }
+  }
+}
