--- a/src/Styles/Footer/footer.scss
+++ b/src/Styles/Footer/footer.scss
@@ -7,18 +7,34 @@
   padding: 10px;
 }
 .footer-div-one {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  margin: auto;
+  text-align: center;
   border-bottom: 1px solid white;
   padding-bottom: 1rem;
   p {
+    text-align: center;
+    margin: auto;
     max-width: 30ch;
     line-height: 23px;
+    margin-bottom: 1rem;
   }
   .info-div-links {
     display: flex;
     gap: 1rem;
+    justify-content: center;
+
+    a {
+      transition: 0.4s ease;
+      &:hover {
+        transform: scaleX(1.2) scaleY(1.2);
+        background-color: gray;
+        border-radius: 5px;
+        padding: 0.5px;
+      }
+    }
   }
 }
 .quick-links {
@@ -65,5 +81,132 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .footer {
+    h3 {
+      font-size: 1.4rem;
+    }
+    p {
+      margin: auto;
+      margin-bottom: 1.5rem;
+    }
+    .footer-div-one .info-div-links {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .footer-div-one {
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      margin: auto;
+      text-align: center;
+      gap: 2.5rem;
+    }
+    .footer-div-two {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
+@media (max-width: 700px) {
+  .footer {
+    h3 {
+      font-size: 1.7rem;
+    }
+    p {
+      margin: auto;
+      margin-bottom: 1.5rem;
+    }
+    .footer-div-one .info-div-links {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .footer-div-one {
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      margin: auto;
+      text-align: center;
+      gap: 2.5rem;
+    }
+    .footer-div-two {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .footer {
+    h3 {
+      font-size: 1.7rem;
+      max-width: 27ch;
+    }
+    p {
+      margin: auto;
+      margin-bottom: 1.5rem;
+    }
+    .footer-div-one .info-div-links {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .footer-div-one {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: center;
+      margin: auto;
+      text-align: center;
+      gap: 2.5rem;
+    }
+    .footer-div-two {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
+@media (min-width: 900px) and (max-width: 1200px) {
+  .footer {
+    p {
+      margin: auto;
+      margin-bottom: 1.5rem;
+    }
+    .footer-div-one .info-div-links {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .footer-div-one {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
+      margin: auto;
+      text-align: center;
+      gap: 2.5rem;
+      padding: 10px;
+    }
+    .programs-div {
+      .programs-div-links {
+        gap: 1rem;
+      }
+    }
   }
 }
