--- a/src/Styles/Admissions/admissions.scss
+++ b/src/Styles/Admissions/admissions.scss
@@ -21,7 +21,7 @@
   }
   .admission-process {
     text-align: center;
-    margin-top: 6rem;
+    margin-top: 10rem;
     h2 {
       font-size: 3rem;
       font-weight: 700;
@@ -174,14 +174,19 @@ table {
   }
 }
 .ready-to-apply {
-  margin-bottom: 12rem;
+  margin-top: 12rem;
+  margin-bottom: 10rem;
   justify-items: center;
 
   h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
-    color: $secondary-color;
+    color: $primary-color;
     text-align: center;
+  }
+  p {
+    color: $secondary-color;
+    font-weight: 700;
   }
   button {
     background-color: $primary-color;
@@ -193,6 +198,247 @@ table {
     &:hover {
       color: white;
       transform: scaleX(1.1) scaleY(1.1);
+    }
+  }
+}
+@media (max-width: 500px) {
+  .ready-to-apply {
+    padding: 10px;
+    text-align: center;
+    margin-top: 5rem;
+  }
+  .admission-process {
+    h2 {
+      padding: 11px;
+    }
+    .admission-process-card-container {
+      display: flex;
+      flex-direction: column;
+      justify-self: center;
+    }
+    .admission-process-card {
+      border: 1px solid grey;
+      padding: 20px;
+      border-radius: 10px;
+    }
+  }
+  .program-requirements {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    ul {
+      text-align: left;
+    }
+  }
+  .important-dates {
+    .important-dates-card-container {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  table {
+    margin: auto;
+    width: 25rem;
+    th {
+      border-bottom: 1px solid grey;
+      padding: 10px;
+    }
+    td {
+      padding: 10px;
+      height: 2rem;
+      border-bottom: 1px solid grey;
+    }
+  }
+  .payment-info {
+    ul {
+      width: 15rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .ready-to-apply {
+    padding: 10px;
+    text-align: center;
+    margin-top: 5rem;
+  }
+  .admission-process {
+    h2 {
+      padding: 11px;
+    }
+    .admission-process-card-container {
+      display: flex;
+      flex-direction: column;
+      justify-self: center;
+    }
+    .admission-process-card {
+      border: 1px solid grey;
+      padding: 20px;
+      border-radius: 10px;
+    }
+  }
+  .program-requirements {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    ul {
+      text-align: left;
+    }
+  }
+  .important-dates {
+    .important-dates-card-container {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  table {
+    margin: auto;
+    width: 30rem;
+    th {
+      border-bottom: 1px solid grey;
+      padding: 10px;
+    }
+    td {
+      padding: 10px;
+      height: 2rem;
+      border-bottom: 1px solid grey;
+    }
+  }
+  .payment-info {
+    ul {
+      width: 15rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .ready-to-apply {
+    padding: 10px;
+    text-align: center;
+    margin-top: 5rem;
+  }
+  .admission-process {
+    h2 {
+      padding: 11px;
+    }
+    .admission-process-card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-self: center;
+    }
+    .admission-process-card {
+      border: 1px solid grey;
+      padding: 20px;
+      border-radius: 10px;
+    }
+  }
+  .program-requirements {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    .diploma-requirements {
+      justify-items: center;
+    }
+    .hnd-requirements {
+      justify-items: center;
+    }
+    ul {
+      text-align: left;
+    }
+  }
+  .important-dates {
+    .important-dates-card-container {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  table {
+    margin: auto;
+    width: 40rem;
+    th {
+      border-bottom: 1px solid grey;
+      padding: 10px;
+    }
+    td {
+      padding: 10px;
+      height: 2rem;
+      border-bottom: 1px solid grey;
+    }
+  }
+  .payment-info {
+    ul {
+      width: 30rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+}
+@media (min-width: 901px) and (max-width: 1200px) {
+  .ready-to-apply {
+    padding: 10px;
+    text-align: center;
+    margin-top: 5rem;
+  }
+  .admission-process {
+    h2 {
+      padding: 11px;
+    }
+    .admission-process-card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-self: center;
+    }
+    .admission-process-card {
+      border: 1px solid grey;
+      padding: 20px;
+      border-radius: 10px;
+    }
+  }
+  .program-requirements {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    .diploma-requirements {
+      justify-items: center;
+    }
+    .hnd-requirements {
+      justify-items: center;
+    }
+    ul {
+      text-align: left;
+    }
+  }
+  .important-dates {
+    .important-dates-card-container {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  table {
+    margin: auto;
+    max-width: 55rem;
+
+    th {
+      border-bottom: 1px solid grey;
+      padding: 10px;
+    }
+    td {
+      padding: 10px;
+      height: 2rem;
+      border-bottom: 1px solid grey;
+    }
+  }
+  .payment-info {
+    ul {
+      min-width: 40rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
   }
 }
