--- a/src/Styles/Contact/contact.css
+++ b/src/Styles/Contact/contact.css
@@ -124,4 +124,70 @@ textarea {
 .form-btn:hover {
   background-color: rgb(38, 186, 38);
   transform: scaleX(1.1) scaleY(1.1);
+}
+
+@media (max-width: 500px) {
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 4rem;
+  }
+  .contact-section .contacth3 {
+    text-align: center;
+    font-size: 3rem;
+  }
+  .contact-section .contact-info-card-container {
+    width: -moz-fit-content;
+    width: fit-content;
+    display: flex;
+    justify-items: center;
+  }
+  .form-div {
+    text-align: center;
+  }
+  .form-div h3 {
+    text-align: center;
+    font-size: 2.7rem;
+  }
+  .form-div form {
+    text-align: left;
+    padding: 1rem;
+  }
+}
+@media (min-width: 501px) and (max-width: 1000px) {
+  .contact-intro-text p {
+    max-width: 70ch;
+  }
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 5rem;
+  }
+  .contact-section .contacth3 {
+    text-align: center;
+    font-size: 3rem;
+  }
+  .contact-section .contact-info-card-container {
+    width: -moz-fit-content;
+    width: fit-content;
+    display: flex;
+    justify-items: center;
+    margin: auto;
+    margin-top: 4rem;
+  }
+  .form-div {
+    text-align: center;
+  }
+  .form-div h3 {
+    text-align: center;
+    font-size: 2.7rem;
+  }
+  .form-div form {
+    text-align: left;
+    padding: 2rem;
+  }
 }/*# sourceMappingURL=contact.css.map */
