--- a/src/Styles/Facilities/facilities.css
+++ b/src/Styles/Facilities/facilities.css
@@ -146,4 +146,131 @@
 }
 .infrastructure-highlight .infrastructure-card-holder .infrastructure-card h2 {
   margin: 0;
+}
+
+@media (max-width: 500px) {
+  .facility-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  .facility-card-container .btn-container {
+    justify-content: center;
+  }
+  .additional-facilities .additional-card-holder {
+    display: flex;
+    flex-direction: column;
+  }
+  .infrastructure-highlight {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder .infrastructure-card {
+    border: 1px solid grey;
+    padding: 15px;
+    border-radius: 10px;
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .facility-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+  }
+  .facility-card-container .btn-container {
+    justify-content: center;
+  }
+  .additional-facilities .additional-card-holder {
+    display: flex;
+    flex-direction: column;
+  }
+  .infrastructure-highlight {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder .infrastructure-card {
+    border: 1px solid grey;
+    padding: 15px;
+    border-radius: 10px;
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .facility-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .facility-card-container .btn-container {
+    justify-content: center;
+  }
+  .additional-facilities .additional-card-holder {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+  .infrastructure-highlight {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-items: center;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder .infrastructure-card {
+    padding: 15px;
+    border-radius: 10px;
+  }
+}
+@media (min-width: 901px) and (max-width: 1200px) {
+  .facility-card-container {
+    gap: 2rem;
+    justify-content: center;
+  }
+  .facility-card-container .btn-container {
+    justify-content: center;
+  }
+  .infrastructure-highlight {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-items: center;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder .infrastructure-card {
+    padding: 15px;
+    border-radius: 10px;
+  }
 }/*# sourceMappingURL=facilities.css.map */
