--- a/src/Styles/Facilities/facilities.scss
+++ b/src/Styles/Facilities/facilities.scss
@@ -148,3 +148,136 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .facility-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    .btn-container {
+      justify-content: center;
+    }
+  }
+  .additional-facilities {
+    .additional-card-holder {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  .infrastructure-highlight {
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+    .infrastructure-card-holder {
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      margin-bottom: 4rem;
+      .infrastructure-card {
+        border: 1px solid grey;
+        padding: 15px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .facility-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    .btn-container {
+      justify-content: center;
+    }
+  }
+  .additional-facilities {
+    .additional-card-holder {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  .infrastructure-highlight {
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+    .infrastructure-card-holder {
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      margin-bottom: 4rem;
+      .infrastructure-card {
+        border: 1px solid grey;
+        padding: 15px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .facility-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .btn-container {
+      justify-content: center;
+    }
+  }
+  .additional-facilities {
+    .additional-card-holder {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
+    }
+  }
+  .infrastructure-highlight {
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+    .infrastructure-card-holder {
+      display: flex;
+      flex-wrap: wrap;
+      justify-items: center;
+      margin-bottom: 4rem;
+      .infrastructure-card {
+        // border: 1px solid grey;
+        padding: 15px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
+@media (min-width: 901px) and (max-width: 1200px) {
+  .facility-card-container {
+    // display: flex;
+    gap: 2rem;
+    justify-content: center;
+    .btn-container {
+      justify-content: center;
+    }
+  }
+
+  .infrastructure-highlight {
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+    .infrastructure-card-holder {
+      display: flex;
+      flex-wrap: wrap;
+      justify-items: center;
+      margin-bottom: 4rem;
+      .infrastructure-card {
+        // border: 1px solid grey;
+        padding: 15px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
