--- a/src/Styles/Header/header.css
+++ b/src/Styles/Header/header.css
@@ -5,7 +5,6 @@
   background-color: white;
   z-index: 2;
   align-items: center;
-  padding: 1rem;
   border-bottom: 1px solid grey;
   position: fixed;
   top: 0;
@@ -27,6 +26,9 @@
   color: red;
   transform: scaleX(1.1) scaleY(1.1);
 }
+.header .header-links .active {
+  color: red;
+}
 .header .header-btn {
   width: 6rem;
   height: 3rem;
@@ -45,4 +47,25 @@
 
 Link :active {
   color: red;
+}
+
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    justify-content: space-around;
+  }
+  header .header-logo,
+  header .header-btn-container {
+    display: none;
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .header {
+    display: flex;
+    justify-content: space-around;
+  }
+  .header .header-logo,
+  .header .header-btn-container {
+    display: none;
+  }
 }/*# sourceMappingURL=header.css.map */
