--- a/src/Styles/Header/header.scss
+++ b/src/Styles/Header/header.scss
@@ -6,7 +6,7 @@
   background-color: white;
   z-index: 2;
   align-items: center;
-  padding: 1rem;
+  // padding: 1rem;
   border-bottom: 1px solid grey;
   position: fixed;
   top: 0;
@@ -26,7 +26,11 @@
         transform: scaleX(1.1) scaleY(1.1);
       }
     }
+    .active {
+      color: red;
+    }
   }
+
   .header-btn {
     width: 6rem;
     height: 3rem;
@@ -45,4 +49,24 @@
 }
 Link :active {
   color: red;
+}
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    justify-content: space-around;
+    .header-logo,
+    .header-btn-container {
+      display: none;
+    }
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .header {
+    display: flex;
+    justify-content: space-around;
+    .header-logo,
+    .header-btn-container {
+      display: none;
+    }
+  }
 }
