--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -4,7 +4,7 @@
   background-position: center;
   background-size: cover;
   margin-top: 5rem;
-  height: 38rem;
+  max-height: 38rem;
   animation-name: change;
   animation-timing-function: ease;
   animation-duration: 10s;
@@ -38,7 +38,7 @@
   justify-content: center;
 }
 .hero p {
-  color: black;
+  color: rgb(3, 47, 3);
   font-size: 1.8rem;
   max-width: 80ch;
   margin: auto;
@@ -63,6 +63,7 @@
   height: 2rem;
   padding: 2rem 2rem;
   border-radius: 5px;
+  margin-bottom: 3rem;
   display: flex;
   align-items: center;
   background-color: green;
@@ -159,4 +160,185 @@
   align-items: center;
   justify-items: center;
   justify-content: center;
+}
+
+@media (max-width: 500px) {
+  .hero {
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    margin-top: 2rem;
+  }
+  .hero .intro-text {
+    margin: auto;
+    text-align: center;
+  }
+  .hero .intro-text h1 {
+    font-size: 3rem;
+    line-height: 70px;
+    margin-bottom: 2rem;
+  }
+  .hero .intro-text p {
+    font-size: 1.5rem;
+    line-height: 29px;
+    font-weight: 700;
+  }
+  .hero .brochure {
+    display: none;
+  }
+  .hero .hero-btn {
+    margin-bottom: 2rem;
+  }
+  .hero-card-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .about-college {
+    padding: 10px;
+  }
+  .about-college ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .about-card-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .hero {
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    margin-top: 2rem;
+  }
+  .hero .intro-text {
+    margin: auto;
+    text-align: center;
+  }
+  .hero .intro-text h1 {
+    font-size: 3.8rem;
+    line-height: 85px;
+    margin-bottom: 2rem;
+    margin: auto;
+  }
+  .hero .intro-text p {
+    font-size: 2rem;
+    line-height: 35px;
+    font-weight: 700;
+  }
+  .hero .brochure {
+    display: none;
+  }
+  .hero .hero-btn {
+    margin-bottom: 2rem;
+  }
+  .hero-card-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .about-college {
+    padding: 10px;
+  }
+  .about-college ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .hero {
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    margin-top: 5rem;
+  }
+  .hero .intro-text {
+    margin: auto;
+    text-align: center;
+  }
+  .hero .intro-text h1 {
+    font-size: 4.5rem;
+    line-height: 85px;
+    margin-bottom: 4rem;
+  }
+  .hero .intro-text p {
+    font-size: 2rem;
+    line-height: 35px;
+    font-weight: 700;
+    margin-bottom: 4rem;
+  }
+  .hero .brochure {
+    display: none;
+  }
+  .hero .hero-btn {
+    margin-bottom: 2rem;
+  }
+  .hero-card-section {
+    gap: 4rem;
+  }
+  .about-college {
+    padding: 10px;
+  }
+  .about-college p {
+    max-width: 70ch;
+  }
+  .about-college ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6rem;
+  }
+}
+@media (min-width: 901px) and (max-width: 1200px) {
+  .hero {
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    margin-top: 5rem;
+  }
+  .hero .intro-text {
+    margin: auto;
+    text-align: center;
+  }
+  .hero .intro-text h1 {
+    font-size: 4.5rem;
+    line-height: 85px;
+    margin-bottom: 4rem;
+  }
+  .hero .intro-text p {
+    font-size: 2rem;
+    line-height: 35px;
+    font-weight: 700;
+    margin-bottom: 4rem;
+  }
+  .hero .hero-btn {
+    margin-bottom: 2rem;
+  }
+  .hero-card-section {
+    gap: 4rem;
+  }
+  .about-college {
+    padding: 10px;
+  }
+  .about-college p {
+    max-width: 90ch;
+  }
+  .about-college ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6rem;
+  }
 }/*# sourceMappingURL=home.css.map */
