--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-size: cover;
   margin-top: 5rem;
-  height: 38rem;
+  max-height: 38rem;
   animation-name: change;
   animation-timing-function: ease;
   animation-duration: 10s;
@@ -41,7 +41,7 @@
     }
   }
   p {
-    color: black;
+    color: rgb(3, 47, 3);
     font-size: 1.8rem;
     max-width: 80ch;
     margin: auto;
@@ -56,6 +56,7 @@
   justify-self: center;
   display: flex;
   gap: 1rem;
+
   a {
     text-decoration: none;
   }
@@ -64,6 +65,7 @@
     height: 2rem;
     padding: 2rem 2rem;
     border-radius: 5px;
+    margin-bottom: 3rem;
     display: flex;
     align-items: center;
     background-color: $primary-color;
@@ -158,5 +160,184 @@
     align-items: center;
     justify-items: center;
     justify-content: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .hero {
+    max-height: fit-content;
+    margin-top: 2rem;
+    .intro-text {
+      margin: auto;
+      text-align: center;
+      h1 {
+        font-size: 3rem;
+        line-height: 70px;
+        margin-bottom: 2rem;
+      }
+      p {
+        font-size: 1.5rem;
+        line-height: 29px;
+        font-weight: 700;
+      }
+    }
+    .brochure {
+      display: none;
+    }
+    .hero-btn {
+      margin-bottom: 2rem;
+    }
+  }
+  .hero-card-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .about-college {
+    padding: 10px;
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+  .about-card-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 501px) and (max-width: 700px) {
+  .hero {
+    max-height: fit-content;
+    margin-top: 2rem;
+
+    .intro-text {
+      margin: auto;
+      text-align: center;
+      h1 {
+        font-size: 3.8rem;
+        line-height: 85px;
+        margin-bottom: 2rem;
+        margin: auto;
+      }
+      p {
+        font-size: 2rem;
+        line-height: 35px;
+        font-weight: 700;
+      }
+    }
+    .brochure {
+      display: none;
+    }
+    .hero-btn {
+      margin-bottom: 2rem;
+    }
+  }
+  .hero-card-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .about-college {
+    padding: 10px;
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 701px) and (max-width: 900px) {
+  .hero {
+    max-height: fit-content;
+    margin-top: 5rem;
+    .intro-text {
+      margin: auto;
+      text-align: center;
+      h1 {
+        font-size: 4.5rem;
+        line-height: 85px;
+        margin-bottom: 4rem;
+      }
+      p {
+        font-size: 2rem;
+        line-height: 35px;
+        font-weight: 700;
+        margin-bottom: 4rem;
+      }
+    }
+    .brochure {
+      display: none;
+    }
+    .hero-btn {
+      margin-bottom: 2rem;
+    }
+  }
+  .hero-card-section {
+    gap: 4rem;
+  }
+  .about-college {
+    padding: 10px;
+    p {
+      max-width: 70ch;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6rem;
+  }
+}
+@media (min-width: 901px) and (max-width: 1200px) {
+  .hero {
+    max-height: fit-content;
+    margin-top: 5rem;
+    .intro-text {
+      margin: auto;
+      text-align: center;
+      h1 {
+        font-size: 4.5rem;
+        line-height: 85px;
+        margin-bottom: 4rem;
+      }
+      p {
+        font-size: 2rem;
+        line-height: 35px;
+        font-weight: 700;
+        margin-bottom: 4rem;
+      }
+    }
+
+    .hero-btn {
+      margin-bottom: 2rem;
+    }
+  }
+  .hero-card-section {
+    gap: 4rem;
+  }
+  .about-college {
+    padding: 10px;
+    p {
+      max-width: 90ch;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+  .about-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6rem;
   }
 }
