--- a/src/Styles/Programs/programs.css
+++ b/src/Styles/Programs/programs.css
@@ -35,7 +35,11 @@ body {
   font-weight: 700;
 }
 .card-section .program-card {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
   background-color: white;
+  border: 1px solid grey;
+  border-radius: 10px;
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -56,7 +60,8 @@ body {
 .card-section .program-card .card-btn {
   width: -moz-fit-content;
   width: fit-content;
-  height: 1.5rem;
+  height: -moz-fit-content;
+  height: fit-content;
   color: white;
   background-color: green;
   border-radius: 10px;
@@ -76,4 +81,46 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
+}
+
+@media (max-width: 500px) {
+  .card-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  .card-section .program-card {
+    border: 1px solid grey;
+    border-radius: 10px;
+  }
+}
+@media (max-width: 700px) {
+  .card-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    gap: 1.5rem;
+  }
+  .card-section .program-card {
+    max-width: 25rem;
+    margin: auto;
+    border: 1px solid grey;
+    border-radius: 10px;
+    justify-content: center;
+  }
+}
+@media (max-width: 1000px) {
+  .card-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    gap: 1.5rem;
+  }
+  .card-section .program-card {
+    max-width: 25rem;
+    margin: auto;
+    border: 1px solid grey;
+    border-radius: 10px;
+    justify-content: center;
+  }
 }/*# sourceMappingURL=programs.css.map */
