--- a/src/Styles/Facilities/facilities.css
+++ b/src/Styles/Facilities/facilities.css
@@ -1,6 +1,6 @@
 .fac-intro-text {
   text-align: center;
-  margin-top: 9rem;
+  margin-top: 14rem;
 }
 .fac-intro-text h2 {
   font-size: 3rem;
@@ -149,6 +149,9 @@
 }
 
 @media (max-width: 500px) {
+  .fac-intro-text {
+    margin-top: 9rem;
+  }
   .facility-card-container {
     display: flex;
     flex-direction: column;
@@ -182,6 +185,9 @@
   }
 }
 @media (min-width: 501px) and (max-width: 700px) {
+  .fac-intro-text {
+    margin-top: 9rem;
+  }
   .facility-card-container {
     display: flex;
     flex-direction: column;
