--- a/src/Styles/Programs/programs.scss
+++ b/src/Styles/Programs/programs.scss
@@ -88,7 +88,7 @@ body {
     }
   }
 }
-@media (max-width: 700px) {
+@media (min-width: 501px) and (max-width: 700px) {
   .card-section {
     display: flex;
     flex-direction: column;
@@ -103,7 +103,10 @@ body {
     }
   }
 }
-@media (max-width: 1000px) {
+@media (min-width: 701px) and (max-width: 1000px) {
+  .intro-text {
+    margin-top: 2rem;
+  }
   .card-section {
     display: flex;
     flex-direction: column;
