--- a/src/Styles/Contact/contact.css
+++ b/src/Styles/Contact/contact.css
@@ -1,6 +1,6 @@
 .contact-intro-text {
   text-align: center;
-  margin-top: 9rem;
+  margin-top: 14rem;
 }
 .contact-intro-text h2 {
   font-size: 3rem;
@@ -127,6 +127,9 @@ textarea {
 }
 
 @media (max-width: 500px) {
+  .contact-intro-text {
+    margin-top: 8rem;
+  }
   .contact-section {
     display: flex;
     flex-direction: column;
@@ -156,7 +159,48 @@ textarea {
     padding: 1rem;
   }
 }
-@media (min-width: 501px) and (max-width: 1000px) {
+@media (min-width: 501px) and (max-width: 700px) {
+  .contact-intro-text {
+    margin-top: 8rem;
+  }
+  .contact-intro-text p {
+    max-width: 70ch;
+  }
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 5rem;
+  }
+  .contact-section .contacth3 {
+    text-align: center;
+    font-size: 3rem;
+  }
+  .contact-section .contact-info-card-container {
+    width: -moz-fit-content;
+    width: fit-content;
+    display: flex;
+    justify-items: center;
+    margin: auto;
+    margin-top: 4rem;
+  }
+  .form-div {
+    text-align: center;
+  }
+  .form-div h3 {
+    text-align: center;
+    font-size: 2.7rem;
+  }
+  .form-div form {
+    text-align: left;
+    padding: 2rem;
+  }
+}
+@media (min-width: 701px) and (max-width: 1000px) {
+  .contact-intro-text {
+    margin-top: 12rem;
+  }
   .contact-intro-text p {
     max-width: 70ch;
   }
