--- a/src/Styles/Contact/contact.scss
+++ b/src/Styles/Contact/contact.scss
@@ -2,7 +2,7 @@
 
 .contact-intro-text {
   text-align: center;
-  margin-top: 9rem;
+  margin-top: 14rem;
   h2 {
     font-size: 3rem;
     font-weight: 700;
@@ -124,6 +124,9 @@ textarea {
 }
 
 @media (max-width: 500px) {
+  .contact-intro-text {
+    margin-top: 8rem;
+  }
   .contact-section {
     display: flex;
     flex-direction: column;
@@ -152,8 +155,48 @@ textarea {
     }
   }
 }
-@media (min-width: 501px) and (max-width: 1000px) {
+@media (min-width: 501px) and (max-width: 700px) {
   .contact-intro-text {
+    margin-top: 8rem;
+
+    p {
+      max-width: 70ch;
+    }
+  }
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: auto;
+    margin-top: 5rem;
+    .contacth3 {
+      text-align: center;
+      font-size: 3rem;
+    }
+    .contact-info-card-container {
+      width: fit-content;
+      display: flex;
+      justify-items: center;
+      margin: auto;
+      margin-top: 4rem;
+    }
+  }
+  .form-div {
+    text-align: center;
+    h3 {
+      text-align: center;
+      font-size: 2.7rem;
+    }
+    form {
+      text-align: left;
+      padding: 2rem;
+    }
+  }
+}
+@media (min-width: 701px) and (max-width: 1000px) {
+  .contact-intro-text {
+    margin-top: 12rem;
+
     p {
       max-width: 70ch;
     }
