--- a/src/Styles/Header/header.css
+++ b/src/Styles/Header/header.css
@@ -29,6 +29,9 @@
 .header .header-links .active {
   color: red;
 }
+.header .header-btn-container {
+  margin-right: 1rem;
+}
 .header .header-btn {
   width: 6rem;
   height: 3rem;
@@ -53,6 +56,10 @@ Link :active {
   header {
     display: flex;
     justify-content: space-around;
+    height: 4rem;
+  }
+  header .header-links {
+    margin: auto;
   }
   header .header-logo,
   header .header-btn-container {
@@ -61,10 +68,20 @@ Link :active {
 }
 @media (min-width: 501px) and (max-width: 700px) {
   .header {
+    height: 4rem;
     display: flex;
     justify-content: space-around;
   }
   .header .header-logo,
+  .header .header-btn-container {
+    display: none;
+  }
+}
+@media (min-width: 701px) and (max-width: 800px) {
+  .header {
+    display: flex;
+    justify-content: space-around;
+  }
   .header .header-btn-container {
     display: none;
   }
