--- a/src/Styles/Header/header.scss
+++ b/src/Styles/Header/header.scss
@@ -30,6 +30,9 @@
       color: red;
     }
   }
+  .header-btn-container {
+    margin-right: 1rem;
+  }
 
   .header-btn {
     width: 6rem;
@@ -54,6 +57,10 @@ Link :active {
   header {
     display: flex;
     justify-content: space-around;
+    height: 4rem;
+    .header-links {
+      margin: auto;
+    }
     .header-logo,
     .header-btn-container {
       display: none;
@@ -62,9 +69,21 @@ Link :active {
 }
 @media (min-width: 501px) and (max-width: 700px) {
   .header {
+    height: 4rem;
     display: flex;
     justify-content: space-around;
     .header-logo,
+    .header-btn-container {
+      display: none;
+    }
+  }
+}
+@media (min-width: 701px) and (max-width: 800px) {
+  .header {
+    // height: 4rem;
+    display: flex;
+    justify-content: space-around;
+
     .header-btn-container {
       display: none;
     }
