--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -3,8 +3,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 5rem;
-  max-height: 38rem;
+  margin-top: 7.8rem;
+  min-height: 36rem;
   animation-name: change;
   animation-timing-function: ease;
   animation-duration: 10s;
@@ -166,7 +166,7 @@
   .hero {
     max-height: -moz-fit-content;
     max-height: fit-content;
-    margin-top: 2rem;
+    margin-top: 3rem;
   }
   .hero .intro-text {
     margin: auto;
@@ -210,7 +210,7 @@
   .hero {
     max-height: -moz-fit-content;
     max-height: fit-content;
-    margin-top: 2rem;
+    margin-top: 5rem;
   }
   .hero .intro-text {
     margin: auto;
@@ -255,7 +255,7 @@
   .hero {
     max-height: -moz-fit-content;
     max-height: fit-content;
-    margin-top: 5rem;
+    margin-top: 9rem;
   }
   .hero .intro-text {
     margin: auto;
@@ -302,7 +302,7 @@
   .hero {
     max-height: -moz-fit-content;
     max-height: fit-content;
-    margin-top: 5rem;
+    margin-top: 10rem;
   }
   .hero .intro-text {
     margin: auto;
