--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -5,8 +5,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 5rem;
-  max-height: 38rem;
+  margin-top: 7.8rem;
+  min-height: 36rem;
   animation-name: change;
   animation-timing-function: ease;
   animation-duration: 10s;
@@ -166,7 +166,7 @@
 @media (max-width: 500px) {
   .hero {
     max-height: fit-content;
-    margin-top: 2rem;
+    margin-top: 3rem;
     .intro-text {
       margin: auto;
       text-align: center;
@@ -209,7 +209,7 @@
 @media (min-width: 501px) and (max-width: 700px) {
   .hero {
     max-height: fit-content;
-    margin-top: 2rem;
+    margin-top: 5rem;
 
     .intro-text {
       margin: auto;
@@ -254,7 +254,7 @@
 @media (min-width: 701px) and (max-width: 900px) {
   .hero {
     max-height: fit-content;
-    margin-top: 5rem;
+    margin-top: 9rem;
     .intro-text {
       margin: auto;
       text-align: center;
@@ -300,7 +300,7 @@
 @media (min-width: 901px) and (max-width: 1200px) {
   .hero {
     max-height: fit-content;
-    margin-top: 5rem;
+    margin-top: 10rem;
     .intro-text {
       margin: auto;
       text-align: center;
