--- a/src/Styles/Facilities/facilities.css
+++ b/src/Styles/Facilities/facilities.css
@@ -1,6 +1,6 @@
 .fac-intro-text {
   text-align: center;
-  margin-top: 14rem;
+  margin-top: 12rem;
 }
 .fac-intro-text h2 {
   font-size: 3rem;
@@ -150,7 +150,7 @@
 
 @media (max-width: 500px) {
   .fac-intro-text {
-    margin-top: 9rem;
+    margin-top: 6rem;
   }
   .facility-card-container {
     display: flex;
@@ -186,7 +186,7 @@
 }
 @media (min-width: 501px) and (max-width: 700px) {
   .fac-intro-text {
-    margin-top: 9rem;
+    margin-top: 7rem;
   }
   .facility-card-container {
     display: flex;
@@ -221,6 +221,9 @@
   }
 }
 @media (min-width: 701px) and (max-width: 900px) {
+  .fac-intro-text {
+    margin-top: 11rem;
+  }
   .facility-card-container {
     display: flex;
     flex-wrap: wrap;
