--- a/src/Styles/Facilities/facilities.scss
+++ b/src/Styles/Facilities/facilities.scss
@@ -1,7 +1,7 @@
 @use "../variables" as *;
 .fac-intro-text {
   text-align: center;
-  margin-top: 14rem;
+  margin-top: 12rem;
   h2 {
     font-size: 3rem;
     font-weight: 700;
@@ -151,7 +151,7 @@
 
 @media (max-width: 500px) {
   .fac-intro-text {
-    margin-top: 9rem;
+    margin-top: 6rem;
   }
   .facility-card-container {
     display: flex;
@@ -188,7 +188,7 @@
 }
 @media (min-width: 501px) and (max-width: 700px) {
   .fac-intro-text {
-    margin-top: 9rem;
+    margin-top: 7rem;
   }
   .facility-card-container {
     display: flex;
@@ -224,6 +224,9 @@
   }
 }
 @media (min-width: 701px) and (max-width: 900px) {
+  .fac-intro-text {
+    margin-top: 11rem;
+  }
   .facility-card-container {
     display: flex;
     flex-wrap: wrap;
