--- a/src/Styles/Programs/programs.css
+++ b/src/Styles/Programs/programs.css
@@ -3,7 +3,7 @@ body {
 }
 
 .intro-section {
-  margin-top: 10rem;
+  margin-top: 11rem;
   padding: 1rem;
   text-align: center;
 }
@@ -84,6 +84,9 @@ body {
 }
 
 @media (max-width: 500px) {
+  .intro-section {
+    margin-top: 5rem;
+  }
   .card-section {
     display: flex;
     flex-direction: column;
@@ -95,6 +98,9 @@ body {
   }
 }
 @media (min-width: 501px) and (max-width: 700px) {
+  .intro-section {
+    margin-top: 6rem;
+  }
   .card-section {
     display: flex;
     flex-direction: column;
@@ -110,9 +116,6 @@ body {
   }
 }
 @media (min-width: 701px) and (max-width: 1000px) {
-  .intro-text {
-    margin-top: 2rem;
-  }
   .card-section {
     display: flex;
     flex-direction: column;
