responsive done for devices

--- a/src/Styles/Facilities/facilities.css
+++ b/src/Styles/Facilities/facilities.css
@@ -148,7 +148,7 @@
   margin: 0;
 }
 
-@media (max-width: 500px) {
+@media (min-width: 320px) and (max-width: 499px) {
   .fac-intro-text {
     margin-top: 6rem;
   }
@@ -159,6 +159,48 @@
   }
   .facility-card-container .btn-container {
     justify-content: center;
+  }
+  .additional-facilities .additional-card-holder {
+    display: flex;
+    flex-direction: column;
+  }
+  .infrastructure-highlight {
+    width: -moz-fit-content;
+    width: fit-content;
+    justify-items: center;
+    padding: 25px;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin-bottom: 4rem;
+  }
+  .infrastructure-highlight .infrastructure-card-holder .infrastructure-card {
+    border: 1px solid grey;
+    padding: 15px;
+    border-radius: 10px;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+  }
+  .fac-intro-text {
+    margin-top: 6rem;
+  }
+  .facility-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  .facility-card-container .btn-container {
+    justify-content: center;
+  }
+  .additional-facilities {
+    margin: auto;
   }
   .additional-facilities .additional-card-holder {
     display: flex;
