--- a/src/Styles/Header/header.scss
+++ b/src/Styles/Header/header.scss
@@ -53,13 +53,39 @@
 Link :active {
   color: red;
 }
-@media (max-width: 500px) {
+
+// @media (min-width: 375px) and (max-width: 499) {
+//   .header {
+//     a {
+//       font-size: 25px;
+//     }
+//   }
+// }
+@media (min-width: 300px) and (max-width: 374px) {
   header {
-    display: flex;
-    justify-content: space-around;
     height: 4rem;
     .header-links {
       margin: auto;
+      a {
+        font-size: 11.5px;
+      }
+    }
+    .header-logo,
+    .header-btn-container {
+      display: none;
+    }
+  }
+}
+@media (min-width: 375px) and (max-width: 500px) {
+  header {
+    height: 4rem;
+    .header-links {
+      margin: auto;
+      display: flex;
+      gap: 5px;
+      a {
+        font-size: 13px;
+      }
     }
     .header-logo,
     .header-btn-container {
