--- a/src/Styles/Facilities/facilities.scss
+++ b/src/Styles/Facilities/facilities.scss
@@ -182,6 +182,7 @@
         border: 1px solid grey;
         padding: 15px;
         border-radius: 10px;
+        margin: auto;
       }
     }
   }
