--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -227,6 +227,9 @@
     .brochure {
       display: none;
     }
+    .hero-btn-container {
+      margin: auto;
+    }
     .hero-btn {
       margin-bottom: 2rem;
     }
@@ -247,12 +250,16 @@
   .about-card-container {
     display: flex;
     flex-direction: column;
+    justify-self: center;
   }
 }
 @media (min-width: 501px) and (max-width: 700px) {
   .hero {
     max-height: fit-content;
     margin-top: 5rem;
+    .hero-btn-container {
+      margin: auto;
+    }
 
     .intro-text {
       margin: auto;
@@ -292,12 +299,16 @@
   .about-card-container {
     display: flex;
     flex-wrap: wrap;
+    justify-self: center;
   }
 }
 @media (min-width: 701px) and (max-width: 900px) {
   .hero {
     max-height: fit-content;
     margin-top: 9rem;
+    .hero-btn-container {
+      margin: auto;
+    }
     .intro-text {
       margin: auto;
       text-align: center;
@@ -344,6 +355,9 @@
   .hero {
     max-height: fit-content;
     margin-top: 10rem;
+    .hero-btn-container {
+      margin: auto;
+    }
     .intro-text {
       margin: auto;
       text-align: center;
