--- a/src/Styles/Admissions/admissions.css
+++ b/src/Styles/Admissions/admissions.css
@@ -31,6 +31,8 @@
   display: flex;
   justify-content: center;
   gap: 2rem;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 5rem;
 }
 .admission-process-card-container .admission-process-card {
@@ -60,6 +62,7 @@
   border: none;
   border-radius: 10px;
   padding: 10px;
+  color: white;
 }
 
 .program-requirements {
@@ -171,6 +174,8 @@ table td {
   justify-items: center;
 }
 .payment-info .list ul {
+  margin-left: auto;
+  margin-right: auto;
   background-color: rgb(200, 195, 195);
   padding: 2rem 3rem;
   border-radius: 5px;
@@ -191,6 +196,9 @@ table td {
 .ready-to-apply p {
   color: red;
   font-weight: 700;
+}
+.ready-to-apply .btn-container {
+  margin: auto;
 }
 .ready-to-apply button {
   background-color: green;
@@ -215,7 +223,7 @@ table td {
     text-align: center;
     margin: auto;
   }
-  .ready-to-apply .btn-container {
+  .btn-container {
     margin: auto;
   }
   .admission-process {
@@ -229,7 +237,8 @@ table td {
     display: flex;
     flex-direction: column;
     justify-self: center;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
   .admission-process .admission-process-card {
     border: 1px solid grey;
@@ -274,6 +283,9 @@ table td {
     text-align: center;
     margin-top: 4rem;
   }
+  .btn-container {
+    margin: auto;
+  }
   .admission-process h2 {
     padding: 11px;
   }
@@ -281,6 +293,8 @@ table td {
     display: flex;
     flex-direction: column;
     justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .admission-process .admission-process-card {
     border: 1px solid grey;
@@ -325,6 +339,9 @@ table td {
     text-align: center;
     margin-top: 8rem;
   }
+  .btn-container {
+    margin: auto;
+  }
   .admission-process h2 {
     padding: 11px;
   }
@@ -332,6 +349,8 @@ table td {
     display: flex;
     flex-wrap: wrap;
     justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .admission-process .admission-process-card {
     border: 1px solid grey;
@@ -382,6 +401,12 @@ table td {
     text-align: center;
     margin-top: 10rem;
   }
+  .btn-container {
+    margin: auto;
+  }
+  .btn-container .ready-to-apply button {
+    margin: auto;
+  }
   .admission-process h2 {
     padding: 11px;
   }
@@ -389,6 +414,8 @@ table td {
     display: flex;
     flex-wrap: wrap;
     justify-self: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .admission-process .admission-process-card {
     border: 1px solid grey;
