--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -56,6 +56,7 @@
   justify-self: center;
   display: flex;
   gap: 1rem;
+  margin: auto;
 
   a {
     text-decoration: none;
@@ -125,12 +126,19 @@
     }
   }
 }
+.about-card-section {
+  justify-content: center;
+  justify-items: center;
+}
 .about-card-container {
   display: flex;
   flex-direction: row;
   gap: 4rem;
   justify-content: center;
-  margin: 6rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
   .about-card {
     padding: 10px;
@@ -227,12 +235,13 @@
     .brochure {
       display: none;
     }
-    .hero-btn-container {
-      margin: auto;
-    }
+
     .hero-btn {
       margin-bottom: 2rem;
     }
+  }
+  .hero-btn-container {
+    margin: auto;
   }
   .hero-card-section {
     display: flex;
@@ -257,9 +266,6 @@
   .hero {
     max-height: fit-content;
     margin-top: 5rem;
-    .hero-btn-container {
-      margin: auto;
-    }
 
     .intro-text {
       margin: auto;
@@ -282,6 +288,9 @@
     .hero-btn {
       margin-bottom: 2rem;
     }
+  }
+  .hero-btn-container {
+    margin: auto;
   }
   .hero-card-section {
     display: flex;
@@ -306,9 +315,7 @@
   .hero {
     max-height: fit-content;
     margin-top: 9rem;
-    .hero-btn-container {
-      margin: auto;
-    }
+
     .intro-text {
       margin: auto;
       text-align: center;
@@ -330,6 +337,9 @@
     .hero-btn {
       margin-bottom: 2rem;
     }
+  }
+  .hero-btn-container {
+    margin: auto;
   }
   .hero-card-section {
     gap: 4rem;
@@ -355,9 +365,7 @@
   .hero {
     max-height: fit-content;
     margin-top: 10rem;
-    .hero-btn-container {
-      margin: auto;
-    }
+
     .intro-text {
       margin: auto;
       text-align: center;
@@ -377,6 +385,9 @@
     .hero-btn {
       margin-bottom: 2rem;
     }
+  }
+  .hero-btn-container {
+    margin: auto;
   }
   .hero-card-section {
     gap: 4rem;
