--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -53,7 +53,6 @@
   justify-self: center;
   display: flex;
   gap: 1rem;
-  margin: auto;
 }
 .hero-btn-container a {
   text-decoration: none;
@@ -64,7 +63,6 @@
   height: 2rem;
   padding: 2rem 2rem;
   border-radius: 5px;
-  margin-bottom: 3rem;
   display: flex;
   align-items: center;
   background-color: green;
@@ -135,6 +133,7 @@
   flex-direction: row;
   gap: 4rem;
   justify-content: center;
+  justify-self: center;
   margin-top: 6rem;
   margin-bottom: 6rem;
   margin-left: auto;
@@ -194,8 +193,9 @@
   .hero .brochure {
     display: none;
   }
-  .hero .hero-btn {
-    margin-bottom: 2rem;
+  .hero-btn-container {
+    margin-top: 4rem;
+    display: flex;
   }
   .hero-card-section {
     display: flex;
@@ -213,6 +213,7 @@
   .about-card-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     justify-self: center;
   }
 }
@@ -244,6 +245,8 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-self: center;
+    display: flex;
   }
   .hero-card-section {
     display: flex;
@@ -261,6 +264,7 @@
   .about-card-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     justify-self: center;
   }
 }
@@ -293,6 +297,8 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-self: center;
+    display: flex;
   }
   .hero-card-section {
     display: flex;
@@ -310,6 +316,7 @@
   .about-card-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     justify-self: center;
   }
 }
@@ -342,6 +349,8 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-self: center;
+    display: flex;
   }
   .hero-card-section {
     gap: 4rem;
@@ -389,6 +398,8 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-self: center;
+    display: flex;
   }
   .hero-card-section {
     gap: 4rem;
